syntax = "proto3";

package driver;

option go_package = "github.com/uit-go/grpc/driver";

service DriverService {
  rpc FindNearbyDrivers(FindNearbyDriversRequest) returns (FindNearbyDriversResponse);
  rpc GetDriverStatus(GetDriverStatusRequest) returns (GetDriverStatusResponse);
  rpc UpdateDriverLocation(UpdateDriverLocationRequest) returns (UpdateDriverLocationResponse);
}

message FindNearbyDriversRequest {
  double latitude = 1;
  double longitude = 2;
  double radius_km = 3;
}

message DriverInfo {
  int64 id = 1;
  int64 user_id = 2;
  string vehicle_plate = 3;
  string vehicle_model = 4;
  string status = 5;
  double current_latitude = 6;
  double current_longitude = 7;
}

message FindNearbyDriversResponse {
  repeated DriverInfo drivers = 1;
}

message GetDriverStatusRequest {
  int64 driver_id = 1;
}

message GetDriverStatusResponse {
  int64 driver_id = 1;
  string status = 2;
  double current_latitude = 3;
  double current_longitude = 4;
}

message UpdateDriverLocationRequest {
  int64 driver_id = 1;
  double latitude = 2;
  double longitude = 3;
}

message UpdateDriverLocationResponse {
  bool success = 1;
  string message = 2;
}